# AttendanceProto3_Server

./: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: auth_utils.py  crud.py  db.py  models.py  schemas.py
app/routes/: student.py  teacher.py  user.py
